--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,1 @@
-include README.rst requirements.txt LICENSE.txt example-config.ini
+include README.rst requirements.txt LICENSE.txt example-config.ini owncloud_news_updater/version.txt
