Remove old files and explain how to use systemd

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,1 @@
-include README.rst CHANGELOG.rst requirements.txt LICENSE.txt example-config.ini owncloud_news_updater/version.txt
+include README.rst CHANGELOG.rst requirements.txt LICENSE.txt owncloud_news_updater/version.txt
