--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "3.5"
 
 before_install:
-  - pip install pep8
+  - pip install pep8 mypy-lang
   - if [[ $TRAVIS_PYTHON_VERSION == "3.4" ]]; then pip3 install typing; fi
 
 script:
