--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 sudo: false
 language: python
 python:
-  - "3.4"
   - "3.5"
+  - "3.6"
 
 before_install:
-  - pip install pep8 mypy-lang
+  - pip install pycodestyle mypy
 
 script:
   - make test
